k8s/ingress/ingress-nginx/todolist/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: web
        image: cnych/todo:v1.1
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  type: ClusterIP
  ports:
  - name: web
    port: 3000
    targetPort: 3000
