k8s/ingress/ingress-nginx/todolist/ingress-todolist-urlrewrite.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-url-rewrite
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /todolist/
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/configuration-snippet: |  # 多个重定向从写
      rewrite ^/stylesheets/(.*)$ /todolist/stylesheets/$1 redirect;  
      rewrite ^/images/(.*)$ /todolist/images/$1 redirect;
      rewrite ^(/app)$ $1/ redirect;
spec:
  rules:
  - host: todolist.zjqi.top
    http:
      paths:
      - path: /todolist(/|$)(.*)
        backend:
          serviceName: todo
          servicePort: 3000
