k8s/ingress/ingress-nginx/todolist/ingress-todolist.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todolist-web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: todolist.zjqi.top
    http:
      paths:
      - path: /
        backend:
          serviceName: todo
          servicePort: 3000
